--- a/Photorama/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Photorama/Base.lproj/Main.storyboard
@@ -17,26 +17,98 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="omk-HG-Ilj">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cpd-3Y-fSU">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="7sI-Cu-YMM">
+                                    <size key="itemSize" width="90" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UICollectionViewCell" id="Izt-Bf-6jX" customClass="PhotoCollectionViewCell" customModule="Photorama" customModuleProvider="target">
+                                        <rect key="frame" x="2" y="66" width="90" height="90"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="1OH-9d-c8C">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wd3-sr-6gl">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="1OH-9d-c8C" firstAttribute="centerY" secondItem="wd3-sr-6gl" secondAttribute="centerY" id="6F7-6c-n8x"/>
+                                            <constraint firstItem="wd3-sr-6gl" firstAttribute="leading" secondItem="Izt-Bf-6jX" secondAttribute="leading" id="E0r-ti-bft"/>
+                                            <constraint firstAttribute="trailing" secondItem="wd3-sr-6gl" secondAttribute="trailing" id="XZm-R1-qwK"/>
+                                            <constraint firstAttribute="bottom" secondItem="wd3-sr-6gl" secondAttribute="bottom" id="a9a-gX-hgI"/>
+                                            <constraint firstItem="1OH-9d-c8C" firstAttribute="centerX" secondItem="wd3-sr-6gl" secondAttribute="centerX" id="cHR-jg-UAZ"/>
+                                            <constraint firstItem="wd3-sr-6gl" firstAttribute="top" secondItem="Izt-Bf-6jX" secondAttribute="top" id="zo3-3F-gax"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="wd3-sr-6gl" id="rRE-u2-UuL"/>
+                                            <outlet property="spinner" destination="1OH-9d-c8C" id="jkQ-mc-Ib5"/>
+                                            <segue destination="6aR-WK-miR" kind="show" identifier="ShowPhoto" id="gS5-5i-bRp"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="omk-HG-Ilj" secondAttribute="bottom" id="Bju-au-u4r"/>
-                            <constraint firstAttribute="trailing" secondItem="omk-HG-Ilj" secondAttribute="trailing" id="Y1a-ht-Jgy"/>
-                            <constraint firstItem="omk-HG-Ilj" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fVN-Bd-Yrs"/>
-                            <constraint firstItem="omk-HG-Ilj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mIB-fI-ORn"/>
+                            <constraint firstAttribute="bottom" secondItem="cpd-3Y-fSU" secondAttribute="bottom" id="eJq-h5-jhn"/>
+                            <constraint firstAttribute="trailing" secondItem="cpd-3Y-fSU" secondAttribute="trailing" id="qs0-kM-Heh"/>
+                            <constraint firstItem="cpd-3Y-fSU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="rbf-wc-2RE"/>
+                            <constraint firstItem="cpd-3Y-fSU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wrz-Uj-I3s"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Photorama" id="uRx-oh-4c9"/>
                     <connections>
-                        <outlet property="imageView" destination="omk-HG-Ilj" id="l4D-qq-muk"/>
+                        <outlet property="collectionView" destination="cpd-3Y-fSU" id="wsb-wV-OKp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="729" y="-377"/>
+        </scene>
+        <!--Photo Info View Controller-->
+        <scene sceneID="edX-TX-o7K">
+            <objects>
+                <viewController id="6aR-WK-miR" customClass="PhotoInfoViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OCf-NP-MNo"/>
+                        <viewControllerLayoutGuide type="bottom" id="RiY-II-6oo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RB6-y4-Uwo">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nvY-IY-Hgs">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="leading" secondItem="RB6-y4-Uwo" secondAttribute="leading" id="Jdw-lo-Q9X"/>
+                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="top" secondItem="RB6-y4-Uwo" secondAttribute="top" id="MUv-aU-Wa3"/>
+                            <constraint firstAttribute="bottom" secondItem="nvY-IY-Hgs" secondAttribute="bottom" id="Paz-B2-t21"/>
+                            <constraint firstAttribute="trailing" secondItem="nvY-IY-Hgs" secondAttribute="trailing" id="Pjl-UJ-GUX"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="nvY-IY-Hgs" id="oqG-nd-I3N"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IKu-Uj-SUi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1387" y="-377"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="U8a-F3-y2J">
